--- a/UnitTesting.Tests/packages.config
+++ b/UnitTesting.Tests/packages.config
@@ -5,6 +5,7 @@
   <package id="AutoFixture.AutoMoq" version="3.50.2" targetFramework="net461" />
   <package id="AutoFixture.Idioms" version="3.50.2" targetFramework="net461" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
+  <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="Moq" version="4.5.28" targetFramework="net461" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
 </packages>
