--- a/UnitTesting/UnitTesting.csproj
+++ b/UnitTesting/UnitTesting.csproj
@@ -41,8 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="1_TestStructure\Component.cs" />
+    <Compile Include="2_TestDouble\Document.cs" />
+    <Compile Include="2_TestDouble\DocumentSigner.cs" />
+    <Compile Include="2_TestDouble\IDocumentRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
