--- a/UnitTesting/UnitTesting.csproj
+++ b/UnitTesting/UnitTesting.csproj
@@ -44,6 +44,7 @@
     <Compile Include="2_TestDouble\Document.cs" />
     <Compile Include="2_TestDouble\DocumentSigner.cs" />
     <Compile Include="2_TestDouble\IDocumentRepository.cs" />
+    <Compile Include="3_FsCheck\Calculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
