--- a/UnitTesting.Tests/UnitTesting.Tests.csproj
+++ b/UnitTesting.Tests/UnitTesting.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="2_TestDouble\DocumentSignerMoqTests.cs" />
     <Compile Include="2_TestDouble\DocumentSignerTests.cs" />
     <Compile Include="3_FsCheck\CalculatorTests.cs" />
+    <Compile Include="4._TDD\FizzBuzzerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
